# forger

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: __init__.py  cli.py  main.py  user.py
src/models/: __init__.py  user.py
src/services/: __init__.py  user_generator.py
