[project]
name = "forger"
version = "0.1.1"
description = "Generate Fake Data anda export to JSON files"
authors = [
    {name = "weyderfs",email = "weyderfs@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "faker (>=37.3.0,<38.0.0)",
    "datetime (>=5.5,<6.0)",
    "typer (>=0.9.0,<1.0.0)",
    "rich (>=13.7.0,<14.0.0)",
]

[project.scripts]
forger = "src.cli:app"

[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
